[package]
name = "anvilcloud_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Lew Ayotte <lew@lewayotte.com>"]

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30.8"
hostname = "0.4.0"
regex = "1.10.4"
serde_json = "1.0.115"

[[bin]]
name = "monitor"
path = "src/monitor.rs"
